# training-content

./: .gitignore  CMakeLists.txt  README.md
binary-trees/: bst.cpp  heap.cpp
contests/: README.md
contests/2019/day-1/1-sorting-stones/: sorting-stones-solution1.cpp  sorting-stones-solution2.cpp
contests/2019/day-1/1-sorting-stones/input/: input00.txt  input01.txt  input02.txt  input03.txt  input04.txt  input05.txt  input06.txt  input07.txt  input08.txt  input09.txt  input10.txt  input11.txt  input12.txt  input13.txt  input14.txt  input15.txt  input16.txt  input17.txt  input18.txt  input19.txt  input20.txt  input21.txt  input22.txt  input23.txt  input24.txt  input25.txt  input26.txt  input27.txt  input29.txt  input33.txt  input38.txt  input39.txt
contests/2019/day-1/1-sorting-stones/output/: output28.txt  output29.txt  output30.txt  output31.txt  output32.txt  output33.txt  output34.txt  output35.txt  output36.txt  output37.txt  output38.txt  output39.txt
contests/2019/day-1/2-mouse-in-the-exploding-maze/: mouse-in-the-exploding-maze-solution1.cpp  mouse-in-the-exploding-maze-solution2.cpp
contests/2019/day-1/2-mouse-in-the-exploding-maze/input/: input00.txt  input01.txt  input02.txt  input03.txt  input04.txt  input05.txt  input06.txt  input07.txt  input08.txt  input09.txt  input10.txt  input11.txt  input12.txt  input13.txt  input14.txt  input15.txt  input16.txt  input17.txt  input18.txt  input19.txt  input20.txt  input21.txt  input22.txt  input23.txt  input24.txt  input25.txt
contests/2019/day-1/3-eat-your-peanuts/: eat-your-peanuts-solution1.cpp  eat-your-peanuts-solution2.cpp
contests/2019/day-1/3-eat-your-peanuts/input/: input00.txt  input01.txt  input02.txt  input03.txt  input04.txt  input05.txt  input06.txt  input07.txt  input08.txt  input09.txt  input10.txt  input11.txt  input12.txt  input13.txt  input14.txt  input15.txt  input16.txt  input17.txt  input18.txt  input19.txt  input20.txt  input21.txt  input22.txt  input23.txt  input24.txt  input25.txt  input26.txt  input27.txt  input28.txt  input29.txt  input30.txt  input31.txt  input32.txt  input33.txt  input34.txt  (+5 more)
contests/2019/screening-test/1-nirmanis-star-patterns/: nirmanis-star-patterns-solution1.cpp  nirmanis-star-patterns-solution2.cpp
contests/2019/screening-test/2-king-rawanas-palace/: king-rawanas-palace-solution1.cpp  king-rawanas-palace-solution2.cpp
contests/2019/screening-test/3-candy-combinations/: candy-combinations-solution1.cpp  candy-combinations-solution2.cpp
contests/2019/screening-test/4-game-of-life-simulation/: game-of-life-simulation-solution1.cpp  game-of-life-simulation-solution2.cpp
contests/2019/screening-test/5-numbers-numbers-everywhere/: numbers-numbers-everywhere-solution1.cpp  numbers-numbers-everywhere-solution2.cpp
contests/2019/screening-test/6-a-mouse-in-a-maze/: a-mouse-in-a-maze-solution1.cpp  a-mouse-in-a-maze-solution2.cpp
dag/: max-sum.cpp
dag/inputs/: input-max-sum2
graph-traversal/: bfs.cpp  dfs.cpp
graph-traversal/inputs/: input1.in  input2.in
numbers/gcd/: README.md
numbers/prime-numbers/: README.md  p299ex4-prime.cpp
recursion/: factorial.cpp  fibonacci.cpp  fibonacii.cpp
sorting/: bubble-sort.cpp  merge-sort.cpp  merge.cpp
sorting/inputs/: input-sort2  input-sort3.in  input-sort4
time-complexity/: loop1.cpp  loop2.cpp  loop3.cpp
(+92 files in other folders)
